# simple-mining-pool

./: .gitignore  README.md  docker-compose.yml  docker-stack.yml  package-lock.json  package.json
.circleci/: config.yml
backend/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  launch.sh
backend/src/: error.rs  main.rs  transactions.rs
backend/tests/: api.rs  tx_logic.rs
docker/: docker-compose.yml
docker/exobox/: Dockerfile
pool/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose.yml  launch.sh
pool/src/: account.rs  api.rs  lib.rs  main.rs  schema.rs  transactions.rs
tests/: .gitignore  auth_test.js  package.json  signup.js  test.sh
