[package]
name = "simple-mining-pool"
version = "0.2.0"
authors = ["Ilya"]
repository = "https://github.com/ilerik/simple-mining-pool"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum"]
description = "Exonum blockchain implementing a simple mining pool service backend."

[dependencies]
exonum = "0.9.1"
exonum-configuration = "0.9.1"
exonum-time = "0.9.1"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
iron = "=0.6.0"
bodyparser = "=0.8.0"
router = "=0.6.0"
failure = "=0.1.2"
frank_jwt = "3.0"

[dev-dependencies]
exonum-testkit = "0.9.1"
serde_json = "1.0.0"
pretty_assertions = "=0.5.1"
assert_matches = "1.2.0"
rand = "=0.4.2"
